# django-hawk-drf

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  makefile  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
django_hawk_drf/: authentication.py  middleware.py  models.py
django_hawk_drf/tests/: settings.py  test_views.py  test_views_drf.py  urls.py  views.py
