[metadata]
name = django-hawk-drf
author = Cameron Lamb
author_email = live.services@digital.trade.gov.uk
description = Authenticate Django Rest Framework Views with django-hawk
version = 0.0.1
url = https://github.com/uktrade/django-hawk-drf/
keywords =
  django
long_description = file:README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
include_package_data = true
packages = find:
install_requires =
    Django>=2.2, <4.1
    django-hawk>=0.0.1, <1.0
    djangorestframework
    mohawk

[mypy]
python_version = 3.10
plugins = 
  mypy_django_plugin.main,
  mypy_drf_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "django_hawk_drf.tests.settings"

[mypy-mohawk.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[pep8]
exclude = */migrations/*,__pycache__,manage.py
# W503: line break occurred before a binary operator (not recommended in PEP 8)
ignore = W503
max-line-length = 100

[flake8]
# D100: Missing docstring in public module
# D104: Missing docstring in public package
# D106: Missing docstring in public nested class
# D200: One-line docstring should fit on one line with quotes
# D203: 1 blank line required before class docstring
# D205: 1 blank line required between summary line and description
# D400: First line should end with a period
# D401: First line should be in imperative mood
# W503: line break occurred before a binary operator (not recommended in PEP 8)
exclude = */migrations/*,__pycache__,manage.py,.git/*,.tox/*,.coverage,env/*,lib/*,bin/*,include/*,.direnv/*,venv/*,./front_end,./node_modules,./src,./features,./fidovenv
ignore = D100,D104,D106,D200,D203,D205,D400,D401,W503
max-line-length = 100
max-complexity = 10
application-import-names = django_hawk_drf
extend-ignore = E203

[isort]
profile = black
src_paths = django
